@@ -28,7 +28,7 @@ this file type.
 [preface]
 == License
 ....
-Copyright (C) 2008-2014, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2008-2015, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the 
 terms of the GNU Free Documentation License, Version 1.3 or any later version 
 published by the Free Software Foundation; with no Invariant Sections, no 
@@ -55,6 +55,7 @@ June 2009 | Initial version based on earlier notes.
 | 0.0.10 | J.B. Metz | November 2013 | Additional findings regarding usage of the value 0 in the sub directory entry value.
 | 0.0.11 | J.B. Metz | August 2014 | Moved property set information to LIBWPS documentation.
 | 0.0.12 | J.B. Metz | December 2014 | Switched to asccidoc format.
+| 0.0.13 | J.B. Metz | December 2015 | Additional information on OLE compound file with unused root directory entry.
 |===
 
 :numbered:
@@ -303,6 +304,11 @@ Some OLECF files do not have directory entries at all.
 A directory with the name "RootEntry" should be the first directory entry in 
 the directory chain (stream). The root directory should have a type of 0x05. 
 Some older implementations of OLE CF only store the name "R".
+
+[NOTE]
+There does not necessary need to be a root directory entry, assuming the OLE CF 
+has no directory entries at all, or the root directory entry can be marked 
+unused.
 
 === Short-sector streams
 When the size of a stream is smaller than the minimum size of a standard stream 
