@@ -86,6 +86,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20151223
+* worked on format support
+
 20151222
 * applied updates
 
